plugins {
    id 'java'
}

group 'org.twostack'
version '1.6.5'

repositories {
    mavenCentral()
}

compileJava {
    options.encoding = "UTF-8"
}

javadoc {
    options.encoding = "UTF-8"
}

dependencies {
    testImplementation(group: 'junit', name: 'junit', version: '4.13.1')

    implementation 'org.bouncycastle:bcprov-jdk18on:1.72'
    implementation 'com.google.guava:guava:30.0-android'
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'net.jcip:jcip-annotations:1.0'
    implementation 'at.favre.lib:bytes:1.5.0'
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.easymock:easymock:3.2'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
    testImplementation 'org.slf4j:slf4j-jdk14:1.7.30'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.19.0'
    testImplementation 'org.hamcrest:hamcrest-library:1.3'
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
